<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ACACAC"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_address"
            android:textColor="#868686"
            android:textSize="16sp"
            android:background="#f0f0f4"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="22dp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:padding="20dp"
            android:text="@string/town"
            android:textSize="14sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#f0f0f4"
            android:inputType="text"
            android:hint="@string/faisal_town"
            android:padding="16dp"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:padding="20dp"
            android:text="@string/city"
            android:textSize="14sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#f0f0f4"
            android:hint="@string/lahore"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:padding="20dp"
            android:text="@string/house"
            android:textSize="14sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#f0f0f4"
            android:inputType="text"
            android:hint="@string/xyz_a"
            android:padding="16dp"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:paddingStart="22dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save" />
    </LinearLayout>


</LinearLayout>