<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_70sdp"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    android:background="@color/colorPrimary"
    android:fadingEdge="horizontal"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_10sdp">


    <!--    android:weightSum="3"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/status"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/txt_status"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/delivered"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/rs"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:id="@+id/txt_bill"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/_820"
                android:textSize="@dimen/_20sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/_200sdp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_HistoryAddress"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="@string/_264_block_a_johar_town"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="RtlHardcoded" />

<!--                <TextView-->
<!--                    android:id="@+id/date"-->
<!--                    android:layout_width="@dimen/_200sdp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:drawablePadding="@dimen/_5sdp"-->
<!--                    android:gravity="center|left"-->
<!--                    android:includeFontPadding="true"-->
<!--                    android:paddingStart="@dimen/_10sdp"-->
<!--                    android:text="@string/sep_24th_2019"-->
<!--                    android:textSize="@dimen/_12sdp"-->
<!--                    tools:ignore="RtlHardcoded"></TextView>-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_details"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/details"
                    app:backgroundTint="#F04E37"
                    app:cornerRadius="@dimen/_5sdp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>