<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ACACAC"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="#868686"
            android:textSize="16sp"
            android:background="#f0f0f4"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="22dp"
            android:paddingEnd="0dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/town"
                android:layout_width="0sp"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#f0f0f4"
                android:hint="@string/write_your_address"
                android:inputType="text"
                android:padding="16dp"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/actionCancel"
                android:layout_width="wrap_content"
                android:background="@drawable/btn_background"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textSize="12sp"
                android:layout_marginEnd="10dp"
                android:text="@string/change" />

            <Button
                android:id="@+id/actionSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_background"
                android:layout_weight="1"
                android:textSize="12sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/i_am_just_hungry" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>