<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/profile"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_190sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                android:alpha="0.8" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ACACAC"/>

            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/name"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#f0f0f4"
                    android:hint="@string/mr_tiffin"
                    android:padding="@dimen/_12sdp"
                    android:textSize="14sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#ACACAC"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_5sdp">

                <TextView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/phone"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#f0f0f4"
                    android:hint="@string/_923347638921"
                    android:padding="@dimen/_12sdp"
                    android:textSize="14sp" />
<!--                <TextView-->
<!--                    android:id="@+id/txt_number"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:layout_weight="1"-->
<!--                    android:background="#f0f0f4"-->
<!--                    android:hint="+92-345-8181333"-->
<!--                    android:padding="@dimen/_12sdp"-->
<!--                    android:textSize="14sp" />-->



            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ACACAC"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/address_generated"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#f0f0f4"
                    android:id="@+id/txt_address"
                    android:hint="@string/punjab_lahore_faisal_town_147a"
                    android:padding="@dimen/_12sdp"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/city"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/txt_city"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#f0f0f4"
                    android:hint="@string/lahore"
                    android:padding="@dimen/_12sdp"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/town"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/txt_town"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#f0f0f4"
                    android:hint="@string/faisal_town"
                    android:padding="@dimen/_12sdp"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/street"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/txt_street"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#f0f0f4"
                    android:hint="@string/street_x"
                    android:padding="@dimen/_12sdp"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_5sdp">

                <TextView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/house_data"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/txt_houseNum"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#f0f0f4"
                    android:hint="@string/_147a"
                    android:padding="@dimen/_12sdp"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ACACAC"/>

            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_logOut"
                    android:layout_width="wrap_content"
                    android:background="@drawable/btn_background"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:textSize="12sp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/log_out" />

                <Button
                    android:id="@+id/btn_changeAdd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_background"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/btn_change_address" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>