<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/_5sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.181"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="211dp">

                <Button
                    android:id="@+id/button_add"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="88dp"
                    android:background="@drawable/ic_action_increase"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_subtract"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:icon="@drawable/ic_action_decrease"
                    android:layout_marginStart="24dp"
                    android:clickable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/item_size"
                    app:layout_constraintHorizontal_bias="0.848"
                    app:layout_constraintStart_toEndOf="@+id/item_total"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.487"
                    android:focusable="true" />

                <Button
                    android:id="@+id/button_close"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:clickable="true"
                    android:background="@drawable/ic_action_cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.906"
                    app:layout_constraintStart_toEndOf="@+id/button_add"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.256"
                    android:focusable="true" />

                <ImageView
                    android:id="@+id/imageView_cart"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:scaleType="centerCrop"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/toast" />

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/itemname"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="13sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView_cart"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/item_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/size"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_add"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/item_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/unit_price"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="13sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView_cart"
                    app:layout_constraintTop_toBottomOf="@+id/item_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>